Fix missing tenantId when calling the profile function

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Serverless
    • Fully Compatible
    • ALL
    • Server Serverless 2023-01-09, Server Serverless 2023-01-23
    • 163
    • 2
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The code of profile function creates db name with ns string without taking tenant information.

      Error message "note: not profiling because db went away for namespace".

      This issue is found when we test profiling operation. For example:

      • jstests/core/profile2.js

            Assignee:
            Hugh Tong (Inactive)
            Reporter:
            Sophia Tan (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: