SERVER-72173 Fix missing tenantId when calling the profile function