src/mongo/db/introspect.cpp
@@ -88,8 +88,7 @@ void profile(OperationContext* opCtx, NetworkOp op) {
 
     const BSONObj p = b.done();
 
-    const auto ns = CurOp::get(opCtx)->getNS();
-    const string dbName(nsToDatabase(ns));
+    const auto ns = CurOp::get(opCtx)->getNSS();
 
     try {
         // We create a new opCtx so that we aren't interrupted by having the original operation
@@ -107,7 +106,7 @@ void profile(OperationContext* opCtx, NetworkOp op) {
         });
         AlternativeClientRegion acr(newClient);
         const auto dbProfilingNS =
-            NamespaceString(dbName, NamespaceString::kSystemDotProfileCollectionName);
+            NamespaceString(ns.dbName(), NamespaceString::kSystemDotProfileCollectionName);
         AutoGetCollection autoColl(newCtx.get(), dbProfilingNS, MODE_IX);
         Database* const db = autoColl.getDb();
         if (!db) {
