jstests/core/txns/transactions_profiling_with_drops.js
@@ -1,7 +1,12 @@
 // Tests that locks acquisitions for profiling in a transaction have a 0-second timeout.
 // The test runs commands that are not allowed with security token: endSession, profile.
 // @tags: [
-//   not_allowed_with_security_token,uses_transactions, uses_parallel_shell, requires_profiling]
+//   not_allowed_with_security_token,uses_transactions,
+//   uses_parallel_shell,
+//   requires_profiling,
+//   # Uses $where
+//   requires_scripting]
+
 (function() {
 "use strict";
 
